# dongle-sensors

./: .gitignore  CMakeLists.txt  README.md  build.sh  prj.conf
src/: SEGGER_RTT_Conf.h  ble.c  ble.h  blecmd.c  blecmd.h  calendar.c  calendar.h  data.c  data.h  hash.h  leds.h  main.c  multiproto.c  multiproto.h  nrf51_xxac-8kRAM.ld  radio.c  radio.h
web/: cal.js  index.html  main.js  start.sh  test1.html
